src/snapshots/dnstracer__args__tests__not_valid_source_v6_plus_ipv4_flag.snap
---
source: src/args.rs
expression: validated
---
Cannot use IPv4 only queries with an ipv6 source address (2001:db8::1), at src/args.rs:136:21
